---
source: crates/ruff/src/rules/flake8_import_conventions/mod.rs
---
defaults.py:6:12: ICN001 [*] `altair` should be imported as `alt`
  |
5 | def unconventional():
6 |     import altair
  |            ^^^^^^ ICN001
7 |     import matplotlib.pyplot
8 |     import numpy
  |
  = help: Alias `altair` to `alt`

ℹ Suggested fix
3 3 | 
4 4 | 
5 5 | def unconventional():
6   |-    import altair
  6 |+    import altair as alt
7 7 |     import matplotlib.pyplot
8 8 |     import numpy
9 9 |     import pandas

defaults.py:7:12: ICN001 `matplotlib.pyplot` should be imported as `plt`
  |
5 | def unconventional():
6 |     import altair
7 |     import matplotlib.pyplot
  |            ^^^^^^^^^^^^^^^^^ ICN001
8 |     import numpy
9 |     import pandas
  |
  = help: Alias `matplotlib.pyplot` to `plt`

defaults.py:8:12: ICN001 [*] `numpy` should be imported as `np`
   |
 6 |     import altair
 7 |     import matplotlib.pyplot
 8 |     import numpy
   |            ^^^^^ ICN001
 9 |     import pandas
10 |     import seaborn
   |
   = help: Alias `numpy` to `np`

ℹ Suggested fix
5 5 | def unconventional():
6 6 |     import altair
7 7 |     import matplotlib.pyplot
8   |-    import numpy
  8 |+    import numpy as np
9 9 |     import pandas
10 10 |     import seaborn
11 11 |     import tkinter

defaults.py:9:12: ICN001 [*] `pandas` should be imported as `pd`
   |
 7 |     import matplotlib.pyplot
 8 |     import numpy
 9 |     import pandas
   |            ^^^^^^ ICN001
10 |     import seaborn
11 |     import tkinter
   |
   = help: Alias `pandas` to `pd`

ℹ Suggested fix
6  6  |     import altair
7  7  |     import matplotlib.pyplot
8  8  |     import numpy
9     |-    import pandas
   9  |+    import pandas as pd
10 10 |     import seaborn
11 11 |     import tkinter
12 12 | 

defaults.py:10:12: ICN001 [*] `seaborn` should be imported as `sns`
   |
 8 |     import numpy
 9 |     import pandas
10 |     import seaborn
   |            ^^^^^^^ ICN001
11 |     import tkinter
   |
   = help: Alias `seaborn` to `sns`

ℹ Suggested fix
7  7  |     import matplotlib.pyplot
8  8  |     import numpy
9  9  |     import pandas
10    |-    import seaborn
   10 |+    import seaborn as sns
11 11 |     import tkinter
12 12 | 
13 13 | 

defaults.py:11:12: ICN001 [*] `tkinter` should be imported as `tk`
   |
 9 |     import pandas
10 |     import seaborn
11 |     import tkinter
   |            ^^^^^^^ ICN001
   |
   = help: Alias `tkinter` to `tk`

ℹ Suggested fix
8  8  |     import numpy
9  9  |     import pandas
10 10 |     import seaborn
11    |-    import tkinter
   11 |+    import tkinter as tk
12 12 | 
13 13 | 
14 14 | def unconventional_aliases():

defaults.py:15:22: ICN001 [*] `altair` should be imported as `alt`
   |
14 | def unconventional_aliases():
15 |     import altair as altr
   |                      ^^^^ ICN001
16 |     import matplotlib.pyplot as plot
17 |     import numpy as nmp
   |
   = help: Alias `altair` to `alt`

ℹ Suggested fix
12 12 | 
13 13 | 
14 14 | def unconventional_aliases():
15    |-    import altair as altr
   15 |+    import altair as alt
16 16 |     import matplotlib.pyplot as plot
17 17 |     import numpy as nmp
18 18 |     import pandas as pdas

defaults.py:16:33: ICN001 [*] `matplotlib.pyplot` should be imported as `plt`
   |
14 | def unconventional_aliases():
15 |     import altair as altr
16 |     import matplotlib.pyplot as plot
   |                                 ^^^^ ICN001
17 |     import numpy as nmp
18 |     import pandas as pdas
   |
   = help: Alias `matplotlib.pyplot` to `plt`

ℹ Suggested fix
13 13 | 
14 14 | def unconventional_aliases():
15 15 |     import altair as altr
16    |-    import matplotlib.pyplot as plot
   16 |+    import matplotlib.pyplot as plt
17 17 |     import numpy as nmp
18 18 |     import pandas as pdas
19 19 |     import seaborn as sbrn

defaults.py:17:21: ICN001 [*] `numpy` should be imported as `np`
   |
15 |     import altair as altr
16 |     import matplotlib.pyplot as plot
17 |     import numpy as nmp
   |                     ^^^ ICN001
18 |     import pandas as pdas
19 |     import seaborn as sbrn
   |
   = help: Alias `numpy` to `np`

ℹ Suggested fix
14 14 | def unconventional_aliases():
15 15 |     import altair as altr
16 16 |     import matplotlib.pyplot as plot
17    |-    import numpy as nmp
   17 |+    import numpy as np
18 18 |     import pandas as pdas
19 19 |     import seaborn as sbrn
20 20 |     import tkinter as tkr

defaults.py:18:22: ICN001 [*] `pandas` should be imported as `pd`
   |
16 |     import matplotlib.pyplot as plot
17 |     import numpy as nmp
18 |     import pandas as pdas
   |                      ^^^^ ICN001
19 |     import seaborn as sbrn
20 |     import tkinter as tkr
   |
   = help: Alias `pandas` to `pd`

ℹ Suggested fix
15 15 |     import altair as altr
16 16 |     import matplotlib.pyplot as plot
17 17 |     import numpy as nmp
18    |-    import pandas as pdas
   18 |+    import pandas as pd
19 19 |     import seaborn as sbrn
20 20 |     import tkinter as tkr
21 21 | 

defaults.py:19:23: ICN001 [*] `seaborn` should be imported as `sns`
   |
17 |     import numpy as nmp
18 |     import pandas as pdas
19 |     import seaborn as sbrn
   |                       ^^^^ ICN001
20 |     import tkinter as tkr
   |
   = help: Alias `seaborn` to `sns`

ℹ Suggested fix
16 16 |     import matplotlib.pyplot as plot
17 17 |     import numpy as nmp
18 18 |     import pandas as pdas
19    |-    import seaborn as sbrn
   19 |+    import seaborn as sns
20 20 |     import tkinter as tkr
21 21 | 
22 22 | 

defaults.py:20:23: ICN001 [*] `tkinter` should be imported as `tk`
   |
18 |     import pandas as pdas
19 |     import seaborn as sbrn
20 |     import tkinter as tkr
   |                       ^^^ ICN001
   |
   = help: Alias `tkinter` to `tk`

ℹ Suggested fix
17 17 |     import numpy as nmp
18 18 |     import pandas as pdas
19 19 |     import seaborn as sbrn
20    |-    import tkinter as tkr
   20 |+    import tkinter as tk
21 21 | 
22 22 | 
23 23 | def conventional_aliases():


